--- a/tasks/http.yml
+++ b/tasks/http.yml
@@ -45,7 +45,6 @@
   lineinfile:
     path: /etc/httpd/conf/httpd.conf
     regexp: '^DocumentRoot'
-    line: "DocumentRoot \"{{ rgm_root_path }}\""
+    line: "DocumentRoot \"{{ rgm_root_path }}/rgmweb\""
   notify: service_reload_http
-
 
