--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,6 +1,22 @@
 ---
 # tasks file for ansible-role-rgm
 
+# As nagios 4 is present in EPEL repo, disable nagios from EPEL
+- name: "excule nagios from {{ item }}"
+  ini_file:
+    path: /etc/yum.repos.d/epel.repo
+    section: "{{ item }}"
+    option: exclude
+    value: 'nagios*'
+  with_items:
+  - epel
+  - epel-debuginfo
+  - epel-source
+
+- name: force yum clean & make cache
+  yum:
+    update_cache: yes
+
 ### selinux
 # todo: configure RGM to work smoothly *with* selinux enabled
 - name: disable SELinux
