add apache configs

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -11,6 +11,8 @@ mariadb_root_password: ''
 mariadb_user: 'rgminternal'
 mariadb_pwd: '0rd0-c0m1735-b47h0n143'
 
+db_rgmweb: 'rgmweb'
+
 ntp_servers:
 - '0.pool.ntp.org'
 - '1.pool.ntp.org'
