--- a/tasks/http.yml
+++ b/tasks/http.yml
@@ -56,3 +56,17 @@
     line: "DocumentRoot \"{{ rgm_root_path }}/rgmweb\""
   notify: service_reload_http
 
+- name: Install RGM httpd config files
+  template:
+    src: "httpd/{{ item }}.conf.j2"
+    dest: "/etc/httpd/conf.d/{{ item }}.conf"
+    owner: root
+    group: root
+    mode: 0644
+  with_items:
+  - rgm
+  - grafana
+  - kibana
+  - nrdp
+  - rgmapi
+  notify: service_reload_http
