--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,7 +2,7 @@
 # tasks file for ansible-role-rgm
 
 # As nagios 4 is present in EPEL repo, disable nagios from EPEL
-- name: "excule nagios from {{ item }}"
+- name: "exclude nagios from {{ item }}"
   ini_file:
     path: /etc/yum.repos.d/epel.repo
     section: "{{ item }}"
@@ -34,6 +34,7 @@
 ### installs RGM packages & dependencies
 - name: install RGM packages (it may take some time...)
   yum:
+    update_cache: no
     name: "{{ packages }}"
     state: present
   vars:
@@ -44,7 +45,6 @@
     - chrony
     - influxdb
     - grafana
-    - elasticsearch
     - httpd
     - mod_auth_rgm
     - mod_perl
