--- a/tasks/mariadb.yml
+++ b/tasks/mariadb.yml
@@ -16,6 +16,46 @@
     enabled: yes
     state: started
 
+- name: check if MariaDB root user is password protected
+  command: mysql --no-defaults --host=localhost --user=root -e '\q'
+  register: mariadb_status
+  failed_when: mariadb_status.rc == 2
+
+- block:
+  - name: generate random root password for mariadb
+    set_fact:
+      mariadb_root_password: "{{ lookup('password', '/dev/null length=16 chars=ascii_letters,digits,-,_,!,.,*') }}"
+
+  - name: Set root user password
+    mysql_user:
+      name: root
+      host: localhost
+      password: "{{ mariadb_root_password }}"
+      check_implicit_admin: yes
+      login_user: root
+      state: present
+
+  - name: set .my.cnf for root user
+    template:
+      src: mariadb/my.cnf.j2
+      dest: /root/.my.cnf
+      owner: root
+      group: root
+      mode: 0600
+
+  when: mariadb_status.rc == 0
+
+
+- fail:
+    msg: |
+      "Can't connect to MariaDB server using the provided credentials !"
+      "Please check the following variables:"
+      "  mariadb_root_password"
+      "  mariadb_user"
+      "  mariadb_pwd"
+  when: mariadb_status.rc != 0
+
+
 - name: "ensure {{ db_grafana }} database exists"
   mysql_db:
     name: "{{ db_grafana }}"
@@ -29,15 +69,11 @@
     password: "{{ mariadb_pwd }}"
     priv: "{{ db_grafana }}.*:ALL"
     append_privs: yes
-    check_implicit_admin: yes
+#    check_implicit_admin: yes
     login_user: root
     state: present
   when: mysql_db_grafana_created
 
-- name: check is MariaDB root user is password protected
-  command: mysql --host=localhost --user=root -e '\q'
-  register: mariadb_status
-  failed_when: mariadb_status.rc == 2
 
 - name: create mariadb internal RO account
   mysql_user:
@@ -46,33 +82,9 @@
     password: "{{ mariadb_ro_pwd }}"
     priv: 'mysql.*:SELECT'
     append_privs: yes
-    check_implicit_admin: yes
+#    check_implicit_admin: yes
     login_user: root
     state: present
-
-- name: Set root user password
-  mysql_user:
-    name: root
-    host: localhost
-    password: "{{ mariadb_root_password }}"
-    check_implicit_admin: yes
-    login_user: root
-    state: present
-  when: mariadb_status.rc == 0
-
-- name: ensure we can connect as root to MariaDB
-  shell: mysql --host=localhost --user=root --password={{ mariadb_root_password }} --execute='SHOW DATABASES;'
-  register: mariadb_status
-  failed_when: mariadb_status.rc == 2
-
-- fail:
-    msg: |
-      "Can't connect to MariaDB server using the provided credentials !"
-      "Please check the following variables:"
-      "  mariadb_root_password"
-      "  mariadb_user"
-      "  mariadb_pwd"
-  when: mariadb_status.rc != 0
 
 - name: check if TZINFO data are present in MariaDB core database
   command: >
