--- a/tasks/mariadb.yml
+++ b/tasks/mariadb.yml
@@ -45,16 +45,16 @@
 
   when: mariadb_status.rc == 0
 
+- name: ensure we can connect to mariadb
+  command: mysql --host=localhost --user=root -e '\q'
+  register: mariadb_status
+  failed_when: mariadb_status.rc == 2
 
 - fail:
     msg: |
-      "Can't connect to MariaDB server using the provided credentials !"
-      "Please check the following variables:"
-      "  mariadb_root_password"
-      "  mariadb_user"
-      "  mariadb_pwd"
+      "Can't connect to MariaDB server using root credentials !"
+      "Please check the /root/.my.cnf"
   when: mariadb_status.rc != 0
-
 
 - name: "ensure {{ db_grafana }} database exists"
   mysql_db:
@@ -69,7 +69,6 @@
     password: "{{ mariadb_pwd }}"
     priv: "{{ db_grafana }}.*:ALL"
     append_privs: yes
-#    check_implicit_admin: yes
     login_user: root
     state: present
   when: mysql_db_grafana_created
@@ -82,18 +81,17 @@
     password: "{{ mariadb_ro_pwd }}"
     priv: 'mysql.*:SELECT'
     append_privs: yes
-#    check_implicit_admin: yes
     login_user: root
     state: present
 
 - name: check if TZINFO data are present in MariaDB core database
   command: >
-    mysql --user=root --password={{ mariadb_root_password }} --batch --skip-column-names mysql
+    mysql --batch --skip-column-names mysql
       --execute="select count(*) from time_zone_name where Name = 'Europe/Paris';"
   register: mariadb_tzinfo_count
 
 - name: inject TZINFO into MySQL core database
-  shell: mysql_tzinfo_to_sql /usr/share/zoneinfo | mysql --user=root --password={{ mariadb_root_password }} mysql
+  shell: mysql_tzinfo_to_sql /usr/share/zoneinfo | mysql mysql
   args:
     executable: /bin/bash
   when: mariadb_tzinfo_count.stdout != "1"
