added net-tools, rgmapi RPM packages

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -38,6 +38,7 @@ packages_system:
 - net-snmp
 - snmptt
 - chrony
+- net-tools
 
 packages_mariadb:
 - mariadb-server
@@ -83,3 +84,4 @@ packages_rgm:
 - thruk
 - lilac
 - rgmweb
+- rgmapi
