flush handlers before the end for httpd restart

--- a/tasks/http.yml
+++ b/tasks/http.yml
@@ -58,3 +58,7 @@
   - nrdp
   - rgmapi
   notify: service_reload_http
+
+## restart apache now as we'll use RGM API later on role
+- name: flush handlers
+  meta: flush_handlers
