--- a/tasks/grafana.yml
+++ b/tasks/grafana.yml
@@ -31,6 +31,8 @@
   - { section: 'database',          option: 'name',                 value: "{{ db_grafana }}" }
   - { section: 'database',          option: 'user',                 value: "{{ mariadb_user }}" }
   - { section: 'database',          option: 'password',             value: "{{ mariadb_pwd }}" }
+  - { section: 'security',          option: 'admin_user',           value: 'admin' }
+  - { section: 'users',             option: 'default_theme',        value: 'light' }
   - { section: 'auth',              option: 'disable_login_form',   value: 'true' }
   - { section: 'auth',              option: 'disable_signout_menu', value: 'true' }
   - { section: 'auth.anonymous',    option: 'enabled',              value: 'true' }
@@ -39,10 +41,12 @@
   - { section: 'auth.google',       option: 'enabled',              value: 'false' }
   - { section: 'auth.generic_oauth',option: 'enabled',              value: 'false' }
   - { section: 'auth.grafana_com',  option: 'enabled',              value: 'false' }
-  - { section: 'auth.proxy',        option: 'enabled',              value: 'false' }
+  - { section: 'auth.proxy',        option: 'enabled',              value: 'true' }
+  - { section: 'auth.proxy',        option: 'header_name',          value: 'X-WEBAUTH-USER' }
+  - { section: 'auth.proxy',        option: 'header_property',      value: 'username' }
+  - { section: 'auth.proxy',        option: 'auto_sign_up',         value: 'false' }
   - { section: 'auth.basic',        option: 'enabled',              value: 'false' }
   - { section: 'auth.ldap',         option: 'enabled',              value: 'false' }
-  - { section: 'users',             option: 'default_theme',        value: 'light' }
   notify: service_restart_grafana
   register: grafana_ini_changed
 
