--- a/tasks/grafana.yml
+++ b/tasks/grafana.yml
@@ -11,6 +11,7 @@
     state: present
   vars:
     packages: "{{ packages_influx_grafana }}"
+  tags: grafana
   
 - name: "configure grafana.ini file"
   ini_file:
@@ -49,6 +50,7 @@
   - { section: 'auth.ldap',         option: 'enabled',              value: 'false' }
   notify: service_restart_grafana
   register: grafana_ini_changed
+  tags: grafana
 
 # necessary to force DB creation on mariadb server
 - name: force restart grafana if config changed
@@ -57,6 +59,7 @@
     enabled: yes
     state: restarted
   when: grafana_ini_changed.changed
+  tags: grafana
 
 - name: "create histoujs symlink on Grafana public dir"
   file:
@@ -64,6 +67,7 @@
     src: /srv/rgm/histou/histou.js
     state: link
     mode: 0644
+  tags: grafana
 
 - name: put SQL script on grafana
   template:
@@ -73,6 +77,7 @@
     group: root
     mode: 0640
   register: nagflux_ds_updated
+  tags: grafana
 
 # As this will be run on each playbook execution, the SQL request
 # must be idempotent
@@ -82,3 +87,41 @@
     executable: /bin/bash
   when: nagflux_ds_updated
   notify: service_restart_grafana
+  tags: grafana
+
+- name: install grafana plugins
+  grafana_plugin:
+    name: "{{ item }}"
+    state: present
+  with_items:
+  - grafana-simple-json-datasource
+  - fetzerch-sunandmoon-datasource
+  - grafana-worldmap-panel
+  - grafana-clock-panel
+  - grafana-piechart-panel
+  - satellogic-3d-globe-panel
+  - ryantxu-ajax-panel
+  - michaeldmoore-annunciator-panel
+  - farski-blendstat-panel
+  - yesoreyeram-boomtable-panel
+  - briangann-gauge-panel
+  - briangann-datatable-panel
+  - jdbranham-diagram-panel
+  - natel-discrete-panel
+  - larona-epict-panel
+  - agenty-flowcharting-panel
+  - mtanda-histogram-panel
+  - natel-influx-admin-panel
+  - michaeldmoore-multistat-panel
+  - digiapulssi-organisations-panel
+  - bessler-pictureit-panel
+  - natel-plotly-panel
+  - grafana-polystat-panel
+  - corpglory-progresslist-panel
+  - snuids-radar-panel
+  - scadavis-synoptic-panel
+  - marcuscalidus-svg-panel
+  - gretamosa-topology-panel
+  notify: service_restart_grafana
+  tags: grafana
+    
