--- a/tasks/elastic.yml
+++ b/tasks/elastic.yml
@@ -11,23 +11,69 @@
     state: present
   vars:
     packages: "{{ packages_elastic }}"
+  tags:
+  - elastic
+  - kibana
+  - metricbeat
+
+
+ ### Configure Elasticsearch
+
+- name: configure Elasticsearch config file
+  lineinfile:
+    path: /etc/elasticsearch/elasticsearch.yml
+    regexp: '^(#\s*)?network.host:'
+    line: "network.host: ['127.0.0.1']"
+  notify: service_restart_elasticsearch
+  tags: elastic
+
+- name: copy curator config files
+  template:
+    src: "{{ item.src }}"
+    dest: "{{ item.dst }}"
+    owner: root
+    group: root
+    mode: 0644
+  with_items:
+  - { src: 'elastic/curator_actions.yml.j2',    dst: '/etc/elasticsearch/actions.yml' }
+  - { src: 'elastic/curator.yml.j2',            dst: '/etc/elasticsearch/curator.yml' }
+  tags: elastic
+
+- name: set cron job for curator
+  copy:
+    content: "10 0 * * * * root /usr/bin/curator --config /etc/elasticsearch/curator.yml /etc/elasticsearch/actions.yml &> /dev/null"
+    dest: /etc/cron.d/elastic_curator
+    owner: root
+    group: root
+    mode: 0644
+  tags: elastic
+
+
+### Configure kibana
+
+- name: configure Kibana config file
+  lineinfile:
+    path: /etc/kibana/kibana.yml
+    regexp: "{{ item.regex }}"
+    line: "{{ item.line }}"
+  with_items:
+  - { regex: '^#?server.port',              line: 'server.port: 5601' }
+  - { regex: '^#?server.host',              line: 'server.host: "localhost"' }
+  - { regex: '^#?server.basePath',          line: 'server.basePath: "/kibana"' }
+  - { regex: '^#?server.rewriteBasePath',   line: 'server.rewriteBasePath: true' }
+  tags: kibana
+
 
 ### configure metricsbeat
 
 - name: configure metricbeat - reload period
   lineinfile:
     path: /etc/metricbeat/metricbeat.yml
-    regexp: '^#?reload.period: '
-    line: 'reload.period: 10s'
+    regexp: "{{ item.regex }}"
+    line: "{{ item.line }}"
+  with_items:
+  - { regex: '^#?reload.period: ',          line: 'reload.period: 10s' }
+  - { regex: '^#?host: "localhost:5601"',   line: "host: \"{{ ansible_default_ipv4.address }}:5601\""}
+  - { regex: '^#?host: "localhost:9200"',   line: "host: \"{{ ansible_default_ipv4.address }}:9200\"" }
+  tags: metricbeat
 
-- name: configure metricbeat - kibana API
-  lineinfile:
-    path: /etc/metricbeat/metricbeat.yml
-    regexp: '^#?host: "localhost:5601"'
-    line: "host: \"{{ ansible_default_ipv4.address }}:5601\""
-
-- name: configure metricbeat - elasticsearch output
-  lineinfile:
-    path: /etc/metricbeat/metricbeat.yml
-    regexp: '^#?host: "localhost:9200"'
-    line: "host: \"{{ ansible_default_ipv4.address }}:9200\""
