--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -24,6 +24,11 @@ ntp_servers:
 - '2.pool.ntp.org'
 - '3.pool.ntp.org'
 
+# Elasticsearch Curator values
+curator:
+  close_indices_delay: 2
+  delete_indices_delay: 30
+
 ### Grafana variables
 grafana_http_addr: '127.0.0.1'
 grafana_http_port: '3000'
